clusters/titania/apps/torrents/prowlarr/prowlarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector: 
    app: prowlarr
  type: ClusterIP
  ports:
  - port: 9696
    targetPort: 9696
